; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_elf.c_create.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_elf.c_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"arm\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"\7FELF\01\01\01\00\00", align 1
@.str.2 = private unnamed_addr constant [47 x i8] c"Warning: DATA section not support for ELF yet\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32, i8*, i32, %struct.TYPE_3__*)* @create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @create(i32* %0, i8* %1, i32 %2, i8* %3, i32 %4, %struct.TYPE_3__* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_3__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32*, align 8
  %30 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %12, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %41

33:                                               ; preds = %6
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %35 = icmp ne %struct.TYPE_3__* %34, null
  br i1 %35, label %36, label %41

36:                                               ; preds = %33
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br label %41

41:                                               ; preds = %36, %33, %6
  %42 = phi i1 [ false, %33 ], [ false, %6 ], [ %40, %36 ]
  %43 = zext i1 %42 to i32
  %44 = call i32 @r_return_val_if_fail(i32 %43, i32* null)
  %45 = call i32* (...) @r_buf_new()
  store i32* %45, i32** %29, align 8
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = call i32 @strcmp(i64 %48, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %50 = icmp ne i32 %49, 0
  %51 = xor i1 %50, true
  %52 = zext i1 %51 to i32
  store i32 %52, i32* %30, align 4
  %53 = load i32, i32* %30, align 4
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %56

55:                                               ; preds = %41
  store i32 262144, i32* %28, align 4
  br label %57

56:                                               ; preds = %41
  store i32 134512640, i32* %28, align 4
  br label %57

57:                                               ; preds = %56, %55
  %58 = load i32*, i32** %29, align 8
  %59 = call i32 (i32*, i8*, i32, ...) bitcast (i32 (...)* @r_buf_append_bytes to i32 (i32*, i8*, i32, ...)*)(i32* %58, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 8)
  %60 = load i32*, i32** %29, align 8
  %61 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_nbytes to i32 (i32*, i32, ...)*)(i32* %60, i32 8)
  %62 = load i32*, i32** %29, align 8
  %63 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %62, i32 2)
  %64 = load i32, i32* %30, align 4
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %66, label %69

66:                                               ; preds = %57
  %67 = load i32*, i32** %29, align 8
  %68 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %67, i32 40)
  br label %72

69:                                               ; preds = %57
  %70 = load i32*, i32** %29, align 8
  %71 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %70, i32 3)
  br label %72

72:                                               ; preds = %69, %66
  %73 = load i32*, i32** %29, align 8
  %74 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %73, i32 1)
  %75 = load i32*, i32** %29, align 8
  %76 = call i32 @r_buf_size(i32* %75)
  store i32 %76, i32* %17, align 4
  %77 = load i32*, i32** %29, align 8
  %78 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %77, i32 -1)
  %79 = load i32*, i32** %29, align 8
  %80 = call i32 @r_buf_size(i32* %79)
  store i32 %80, i32* %18, align 4
  %81 = load i32*, i32** %29, align 8
  %82 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %81, i32 -1)
  %83 = load i32*, i32** %29, align 8
  %84 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %83, i32 0)
  %85 = load i32*, i32** %29, align 8
  %86 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %85, i32 0)
  %87 = load i32*, i32** %29, align 8
  %88 = call i32 @r_buf_size(i32* %87)
  store i32 %88, i32* %20, align 4
  %89 = load i32*, i32** %29, align 8
  %90 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %89, i32 -1)
  %91 = load i32*, i32** %29, align 8
  %92 = call i32 @r_buf_size(i32* %91)
  store i32 %92, i32* %21, align 4
  %93 = load i32*, i32** %29, align 8
  %94 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %93, i32 -1)
  %95 = load i32*, i32** %29, align 8
  %96 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %95, i32 1)
  %97 = load i32*, i32** %29, align 8
  %98 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %97, i32 0)
  %99 = load i32*, i32** %29, align 8
  %100 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %99, i32 0)
  %101 = load i32*, i32** %29, align 8
  %102 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut16 to i32 (i32*, i32, ...)*)(i32* %101, i32 0)
  %103 = load i32*, i32** %29, align 8
  %104 = call i32 @r_buf_size(i32* %103)
  store i32 %104, i32* %19, align 4
  %105 = load i32*, i32** %29, align 8
  %106 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %105, i32 1)
  %107 = load i32*, i32** %29, align 8
  %108 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %107, i32 0)
  %109 = load i32*, i32** %29, align 8
  %110 = call i32 @r_buf_size(i32* %109)
  store i32 %110, i32* %24, align 4
  %111 = load i32*, i32** %29, align 8
  %112 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %111, i32 -1)
  %113 = load i32*, i32** %29, align 8
  %114 = call i32 @r_buf_size(i32* %113)
  store i32 %114, i32* %25, align 4
  %115 = load i32*, i32** %29, align 8
  %116 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %115, i32 -1)
  %117 = load i32*, i32** %29, align 8
  %118 = call i32 @r_buf_size(i32* %117)
  store i32 %118, i32* %26, align 4
  %119 = load i32*, i32** %29, align 8
  %120 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %119, i32 -1)
  %121 = load i32*, i32** %29, align 8
  %122 = call i32 @r_buf_size(i32* %121)
  store i32 %122, i32* %27, align 4
  %123 = load i32*, i32** %29, align 8
  %124 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %123, i32 -1)
  %125 = load i32*, i32** %29, align 8
  %126 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %125, i32 5)
  %127 = load i32*, i32** %29, align 8
  %128 = call i32 (i32*, i32, ...) bitcast (i32 (...)* @r_buf_append_ut32 to i32 (i32*, i32, ...)*)(i32* %127, i32 4096)
  %129 = load i32, i32* %19, align 4
  store i32 %129, i32* %22, align 4
  %130 = load i32*, i32** %29, align 8
  %131 = call i32 @r_buf_size(i32* %130)
  %132 = load i32, i32* %19, align 4
  %133 = sub nsw i32 %131, %132
  store i32 %133, i32* %23, align 4
  %134 = load i32*, i32** %29, align 8
  %135 = call i32 @r_buf_size(i32* %134)
  store i32 %135, i32* %15, align 4
  %136 = load i32, i32* %15, align 4
  %137 = load i32, i32* %28, align 4
  %138 = add nsw i32 %136, %137
  store i32 %138, i32* %14, align 4
  store i32 52, i32* %16, align 4
  %139 = load i32, i32* %15, align 4
  %140 = load i32, i32* %9, align 4
  %141 = add nsw i32 %139, %140
  %142 = load i32, i32* %11, align 4
  %143 = add nsw i32 %141, %142
  store i32 %143, i32* %13, align 4
  %144 = load i32*, i32** %29, align 8
  %145 = load i32, i32* %17, align 4
  %146 = bitcast i32* %14 to i8*
  %147 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %144, i32 %145, i8* %146, i32 4)
  %148 = load i32*, i32** %29, align 8
  %149 = load i32, i32* %18, align 4
  %150 = bitcast i32* %16 to i8*
  %151 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %148, i32 %149, i8* %150, i32 4)
  %152 = load i32*, i32** %29, align 8
  %153 = load i32, i32* %20, align 4
  %154 = bitcast i32* %22 to i8*
  %155 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %152, i32 %153, i8* %154, i32 2)
  %156 = load i32*, i32** %29, align 8
  %157 = load i32, i32* %21, align 4
  %158 = bitcast i32* %23 to i8*
  %159 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %156, i32 %157, i8* %158, i32 2)
  %160 = load i32, i32* %28, align 4
  store i32 %160, i32* %14, align 4
  %161 = load i32*, i32** %29, align 8
  %162 = load i32, i32* %24, align 4
  %163 = bitcast i32* %14 to i8*
  %164 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %161, i32 %162, i8* %163, i32 4)
  %165 = load i32, i32* %28, align 4
  store i32 %165, i32* %15, align 4
  %166 = load i32*, i32** %29, align 8
  %167 = load i32, i32* %25, align 4
  %168 = bitcast i32* %15 to i8*
  %169 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %166, i32 %167, i8* %168, i32 4)
  %170 = load i32*, i32** %29, align 8
  %171 = load i32, i32* %26, align 4
  %172 = bitcast i32* %13 to i8*
  %173 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %170, i32 %171, i8* %172, i32 4)
  %174 = load i32*, i32** %29, align 8
  %175 = load i32, i32* %27, align 4
  %176 = bitcast i32* %13 to i8*
  %177 = call i32 (i32*, i32, i8*, i32, ...) bitcast (i32 (...)* @r_buf_write_at to i32 (i32*, i32, i8*, i32, ...)*)(i32* %174, i32 %175, i8* %176, i32 4)
  %178 = load i32*, i32** %29, align 8
  %179 = load i8*, i8** %8, align 8
  %180 = load i32, i32* %9, align 4
  %181 = call i32 (i32*, i8*, i32, ...) bitcast (i32 (...)* @r_buf_append_bytes to i32 (i32*, i8*, i32, ...)*)(i32* %178, i8* %179, i32 %180)
  %182 = load i8*, i8** %10, align 8
  %183 = icmp ne i8* %182, null
  br i1 %183, label %184, label %193

184:                                              ; preds = %72
  %185 = load i32, i32* %11, align 4
  %186 = icmp sgt i32 %185, 0
  br i1 %186, label %187, label %193

187:                                              ; preds = %184
  %188 = call i32 @eprintf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0))
  %189 = load i32*, i32** %29, align 8
  %190 = load i8*, i8** %10, align 8
  %191 = load i32, i32* %11, align 4
  %192 = call i32 (i32*, i8*, i32, ...) bitcast (i32 (...)* @r_buf_append_bytes to i32 (i32*, i8*, i32, ...)*)(i32* %189, i8* %190, i32 %191)
  br label %193

193:                                              ; preds = %187, %184, %72
  %194 = load i32*, i32** %29, align 8
  ret i32* %194
}

declare dso_local i32 @r_return_val_if_fail(i32, i32*) #1

declare dso_local i32* @r_buf_new(...) #1

declare dso_local i32 @strcmp(i64, i8*) #1

declare dso_local i32 @r_buf_append_bytes(...) #1

declare dso_local i32 @r_buf_append_nbytes(...) #1

declare dso_local i32 @r_buf_append_ut16(...) #1

declare dso_local i32 @r_buf_append_ut32(...) #1

declare dso_local i32 @r_buf_size(i32*) #1

declare dso_local i32 @r_buf_write_at(...) #1

declare dso_local i32 @eprintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
